--- a/src/assets/less/var.less
+++ b/src/assets/less/var.less
@@ -1,5 +1,8 @@
 /* 全局变量 */
-
+@c-main:        #535353;
+@c-main-dark:   #383838;
+@c-main-hover:  #454545;
+@c-main-border: #666;
 
 /* 常用函数 */
 .box-size(@w: 100%, @h: @w) {
