--- a/src/pages/Editor/Canvas/index.less
+++ b/src/pages/Editor/Canvas/index.less
@@ -4,9 +4,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #000;
+	background-color: #aaa;
 }
 .ed-area {
 	position: relative;
 	background-color: #fff;
+}
+svg {
+	overflow: visible;
 }
