--- a/src/pages/Editor/Canvas/DrawAdd/index.less
+++ b/src/pages/Editor/Canvas/DrawAdd/index.less
@@ -5,6 +5,6 @@
 	width:  100%;
 	height: 100%;
 	z-index: 1;
-	background-color: rgba(255, 0, 0, .2);
+	// background-color: rgba(255, 0, 0, .2);
 	cursor: crosshair;
 }
