--- a/src/pages/Editor/Canvas/DrawEdit/index.less
+++ b/src/pages/Editor/Canvas/DrawEdit/index.less
@@ -1,9 +1,9 @@
-.pen-area {
-	position: absolute;
-	top:  0;
-	left: 0;
-	width:  100%;
-	height: 100%;
-	z-index: 1;
-	background-color: rgba(255, 0, 0, .2);
-}
+// .pen-area {
+// 	position: absolute;
+// 	top:  0;
+// 	left: 0;
+// 	width:  100%;
+// 	height: 100%;
+// 	z-index: 1;
+// 	background-color: rgba(255, 0, 0, .2);
+// }
